feat(recommend): 落地多路召回通道与槽位编排并升级特征向量至1024维
1. 多路召回通道与槽位混合编排：
   - 落地 50% 核心个性化、30% 探索发现（近似+跨领域）、10% 近期高热度、10% 关注流通道；
   - 实现 Slot Blending 槽位模板交织混排与自适应通道顺位吸收降级；
   - 统一收口四道硬过滤门禁（ACTIVE状态/作者自斥/黑名单/近期已看）与作者打散重排。

2. 特征向量维度升级至 1024 维与配置项解耦：
   - 提升向量基准维度至 1024，对齐主流行业标准；
   - 统一通过 RecommendEmbeddingProperties 配置项注入，消除硬编码魔数；
   - 同步更新领域模型、画像初始化、持久化实体与 94 项全量单元测试。